# monkey-rust

./: Cargo.toml  README.md  history.txt
src/: ast.rs  eval.rs  lexer.rs  lib.rs  main.rs  object.rs  parser.rs  repl.rs  token.rs  token_parser.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs  token_parser.rs
src/snapshots/: monkey_rust__eval__tests__eval_array_index.snap  monkey_rust__eval__tests__eval_array_literal.snap  monkey_rust__eval__tests__eval_array_map.snap  monkey_rust__eval__tests__eval_boolean_expression.snap  monkey_rust__eval__tests__eval_builtin_len.snap  monkey_rust__eval__tests__eval_closure.snap  monkey_rust__eval__tests__eval_function_call.snap  monkey_rust__eval__tests__eval_function_declaration.snap  monkey_rust__eval__tests__eval_hash_index.snap  monkey_rust__eval__tests__eval_hash_literal.snap  monkey_rust__eval__tests__eval_if_expression.snap  monkey_rust__eval__tests__eval_let_statements.snap  monkey_rust__eval__tests__eval_not_expression.snap  monkey_rust__eval__tests__eval_numeric_expression.snap  monkey_rust__eval__tests__eval_recursive_fn.snap  monkey_rust__eval__tests__eval_return_statement.snap  monkey_rust__eval__tests__eval_string_concat.snap  monkey_rust__eval__tests__eval_type_errors.snap  monkey_rust__lexer__tests__tokenize_sucessfully.snap  monkey_rust__parser__tests__check_parser_precedence.snap  monkey_rust__parser__tests__parse_array_literal.snap  monkey_rust__parser__tests__parse_call_expression.snap  monkey_rust__parser__tests__parse_expression_statement_identifier.snap  monkey_rust__parser__tests__parse_expression_statement_integer_literal.snap  monkey_rust__parser__tests__parse_fn_expression.snap  (+8 more)
(+15 files in other folders)
