[package]
name = "monkey-rust"
version = "0.1.0"
authors = ["Esdras Amora"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = "4.1.13"
id-arena = "2.2.1"
smol_str = "0.1.24"
strum = { version = "0.24.1", features = ["derive"] }
