[package]
name = "monkey-rust"
version = "0.1.0"
authors = ["Esdras Amora"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
assert-json-diff = "2.0.2"
clap = "4.1.13"
either = { version = "1.8.1", features = ["serde"] }
indextree = { version = "4.6.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
smol_str = "0.1.24"

[dev-dependencies]
pretty_assertions = "1.3.0"
