[package]
name = "monkey-rust"
version = "0.1.0"
authors = ["Esdras Amora"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = "4.1.13"
indextree = { version = "4.6.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
smol_str = "0.1.24"
thiserror = "1.0.40"
tinyvec = { version = "1.6.0", features = ["serde", "alloc"] }
typed-arena = "2.0.2"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml"] }
pretty_assertions = "1.3.0"


[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
